# SamOS_master

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  coverage.xml  demo.db  demo.db-shm  demo.db-wal  filetree.txt  folder_tree.txt  mypy.ini  peek_images.py  pyproject.toml  rebuild_db.py  repo_structure.txt  requirements-lock.txt  router.py  samos - Copy (2).db  samos - Copy.db  samos.db  samos.db-shm  samos.db-wal  soulprint.demo.yaml  soulprint.private.yaml
.github/workflows/: ci.yml  tests.yml
examples/: hello_soulprint.py
examples/skills/: hello_skill.py
legacy/_parked/api_image/: base.py  comfyui_provider.py  local_provider.py  openai_provider.py  stability_provider.py  stub.py
migrations/: env.py
migrations/_parked/: e67264c84611_baseline_schema.py
migrations/versions/: 26d246f7358a_a8b_images_provenance_drift.py  2a99e8b569fa_create_core_tables.py
samos/: __init__.py  cli.py  config.py
samos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
samos/api/: __init__.py  db.py  errors.py  health.py  main.py  metrics.py  models.py  paths.py  requirements.txt  router.py  routes_admin.py  routes_events.py  routes_images.py  routes_sessions.py  routes_snapshot.py  schemas.py  settings.py  snapshot_service.py
samos/api/image/: base.py  comfyui_provider.py  local_provider.py  openai_provider.py  stability_provider.py  stub.py  utils.py
samos/api/llm/: base.py  claude_llm.py  openai_llm.py
samos/api/obs/: events.py
samos/api/providers/: __init__.py
samos/api/services/: image_store.py
samos/api/utils/: db_retry.py  http.py
samos/core/: config.py  memory_agent.py  persona.py  soulprint.py  soulprint_loader.py
samos/memory/: __init__.py  store.py
samos/providers/: comfyui_images.py  image_base.py  llm_service.py  openai_client.py  openai_images.py  stub.py
samos/runtime/: __init__.py  event_logger.py  events.py  heartbeat.py  memory_agent.py  memory_store.py  models.py  pulse.py  router.py
samos/sdk/js/: index.js  package-lock.json  package.json  quick_test.js
samos/sdk/python/: check_state.py  persist_prep.py  pyproject.toml  quick_test.py
samos/sdk/python/samos/: client.py
samos/sdk/python/samos.egg-info/: SOURCES.txt
samos/skills/: __init__.py  base.py  echo.py  hello_skill.py  image.py  memory_recall.py  memory_skill.py  note_skill.py  summarize.py  summarize_skill.py
scripts/: check_soulprint.py  debug_echo.py  debug_llm.py  inspect_test_literals.py  migrate_phase8.py  probe_module.py  smoke-pulse-images.ps1  smoke.ps1  test-pulse-and-images.ps1
snapshots/: corrupt.json  snapshot-2025-08-26T11-17-47+00-00.json  snapshot-2025-08-26T13-23-10+00-00 - Copy.json  snapshot-2025-08-27T08-11-08+00-00.json  snapshot-2025-08-27T08-40-06+00-00.json  snapshot-2025-08-27T09-32-09+00-00.json  snapshot-2025-08-27T09-32-10+00-00.json  snapshot-2025-08-27T09-32-11+00-00.json  snapshot-2025-08-27T09-32-12+00-00.json  snapshot-2025-08-27T09-32-13+00-00.json  snapshot-2025-08-27T09-32-14+00-00.json  snapshot-2025-08-27T09-32-15+00-00.json  snapshot-2025-08-27T09-32-16+00-00.json  snapshot-2025-08-27T09-32-17+00-00.json  snapshot-2025-08-27T09-52-53+00-00.json  snapshot-2025-08-27T10-18-58.937189+00-00.json  snapshot-2025-08-27T10-33-27.186078+00-00.json  snapshot-2025-08-27T10-34-04.210143+00-00.json
tests/: test_demo_sanitized.py  test_echo_skill.py  test_emm_hashtag.py  test_images.py  test_llm_service.py  test_memory.py  test_memory_hook.py  test_memory_skill.py  test_memory_skill_grouped.py  test_migrations.py  test_openai_client.py  test_router.py  test_safety.py  test_skills.py  test_smoke.py  test_soulprint.py  test_summarize.py
tests_legacy/: test_emm_hashtag.py  test_memory.py  test_package_imports.py  test_skills.py  test_smoke.py  test_soulprint.py
tools/: db_bootstrap.py  db_peek.py  make_demo_soulprint.py
