[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samos"
dynamic = ["version"]                 # ← version comes from git tags
requires-python = ">=3.10"
dependencies = ["pydantic>=2.5", "PyYAML>=6.0"]
description = "SamOS – minimal runtime with soulprint, router and skills"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["samos*"]
exclude = ["tests*", "examples*", "snapshots*", ".github*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
samos = "samos.cli:main"

# --- setuptools_scm config ---
[tool.setuptools_scm]
# Produce clean versions from tags; no '+gHASH' in built wheels
local_scheme = "no-local-version"
# Write a build-time version file so 'import samos; samos.__version__' works in wheels
write_to = "samos/_version.py"
